--- a/index.html
+++ b/index.html
@@ -1,53 +1,14 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
-    <script defer src="script.js"></script>
-  </head>
-  <body>
-    <div id="message">
-      <div class="greeting">
-
-        Welcome to Tic-Tac-Toe
-      </div>
-      <div class="instructions">
-        <p id="one">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero cumque temporibus molestias eligendi soluta, laudantium dicta unde id odio architecto, amet atque eveniet. Quisquam cumque nemo libero fuga quasi doloremque!</p>
-        <p id="two">Aliquam enim adipisci, iusto voluptatem, obcaecati accusantium, sapiente nam a asperiores quo odio veniam ratione ex! Iusto unde eos fugit nemo quos ipsam nesciunt, quod, quia molestiae temporibus cupiditate distinctio.</p>
-      </div>
-    </div>
-    <div id="app">
-      <div id="board">
-        <div class="row">
-          <div class="column"><span>X</span></div>
-          <div class="column"></div>
-          <div class="column"></div>
-        </div>
-        <div class="row">
-          <div class="column"></div>
-          <div class="column"><span>O</span></div>
-          <div class="column"></div>
-        </div>
-        <div class="row">
-          <div class="column"></div>
-          <div class="column"></div>
-          <div class="column"></div>
-        </div>
-      </div>
-      <div id="controls">
-        <button class="start">Start</button>
-        <button class="reset">Reset</button>
-      </div>
-    </div>
-    <footer>
-      <div id="flash">
-        <img src="flashupdate.png" alt="Flash">
-      </div>
-      <div id="clippy">
-        <img src="clippy.png" alt="Clippy" height="200vw">
-        <div>
-          Need any help?
-        </div>
-      </div>
-    </footer>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel='stylesheet' type="text/css" href='/styles.css' />
+  <script src="/dist/main.js" defer></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js'></script>
+  <title>Document</title>
+</head>
+<body>
+  <div id='root'></div>
+</body>
 </html>
